# BananaByte

./: .gitignore  AGENTS.md  pyproject.toml
.github/workflows/: main.yml  ruff.yml
agents/xu/: plan.md  simpleReflectionModel.py  test_text2image.py
agents/xu/project/: reflection_memory_and_stateMachine_v3.py  reflection_with_memory_v2.py  simple_reflection_model_v1.py
agents/xu/project/v4/: paper.md  prompt.md  reflection_M_SM_newArch_v4.py  thoughts.md
agents/xu/segmentation_project/: dedectModel.py  dipictFrame.py  main.py  prompt.md  remind.md
agents/xu/test/api_test/: test_image2text.py  test_text2image.py
agents/xu/test/segmentation_test/: analyse.txt  prompt.txt  segmentedTest.py
agents/xu/tests/: test_image2text.py  test_text2image.py  testruff.py
agents/zjc/: agent.py  calculate.py  eval_image.py  format.py  statemachine.py  statemachine_v2.py
agents/zjc/prompts/: draft.md  evaluation.md  start.md
agents/zjc/prompts_v2/: ColorDistortion.md  ContrastReduction.md  TextureBlurring.md  evaluate.md  reflect.md
agents/zjc/v1/: statemachine.py
agents/zjc/v1/prompts/: evaluation.md  reflection.md
agents/zjc/v2/: eval_image.py  format.py  statemachine_v2.py
agents/zjc/v3/: tool.py
core/: __init__.py  llm.py  prompt.py  schemas.py  state.py
core/llm/: __init__.py  adapters.py  common.py  gemini_llm.py  openai_llm.py  tool.py
docs/: core.md  index.md  llm.md  prompt.md  schema.md  state.md  tool.md
tests/: test.py  testGeminiLLM.py  testOpenaiLLM.py  testPrompt.py  testother.py
